# ah

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
src/: ah.c  ah.h  const.h  freqlist.c  freqlist.h  main.c  util.c  util.h
test/: test_ah.c  test_huff.c  test_util.c  util_t.c  util_t.h
test/scripts/: _setup_ah.sh  test_ah_enc_random_stream.sh  test_ah_enc_stream.sh  test_ah_help.sh  test_ah_verbose.sh  test_ah_wrong_args.sh  test_enc_bin_file.sh  test_enc_empty_stream.sh  test_enc_one_byte_stream.sh  test_enc_random_stream.sh  test_enc_stream.sh  test_enc_text_file.sh  test_enc_two_bytes_stream.sh  test_wrong_args.sh  test_wrong_input_file.sh
